--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/jdestiny92/node_express_app/issues"
   },
-  "homepage": "https://github.com/jdestiny92/node_express_app#readme"
+  "homepage": "https://github.com/jdestiny92/node_express_app#readme",
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
